[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Piece.gd" type="Script" id=1]
[ext_resource path="res://scenes/Block.tscn" type="PackedScene" id=2]

[node name="Piece" type="KinematicBody2D"]
script = ExtResource( 1 )
shape = 6

[node name="Block0" parent="." instance=ExtResource( 2 )]
position = Vector2( -9, -9 )
color = 4

[node name="Block1" parent="." instance=ExtResource( 2 )]
position = Vector2( 9, -9 )
color = 4

[node name="Block2" parent="." instance=ExtResource( 2 )]
position = Vector2( -9, 9 )
color = 4

[node name="Block3" parent="." instance=ExtResource( 2 )]
position = Vector2( 9, 9 )
color = 4

